# marketplace

./: Cargo.toml  README.md  pr.md
.github/workflows/: ci.yml
contracts/launchpad/src/: contract.rs  events.rs  storage.rs  test.rs  types.rs
contracts/nft-staking/: Cargo.toml
contracts/nft-staking/src/: contract.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/royalty-splitter/: Cargo.toml
contracts/royalty-splitter/src/: contract.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/soroban-marketplace/src/: contract.rs  storage.rs  test.rs
frontend/afristore-app/: .env.example  instrumentation-client.ts  next.config.js  package.json  playwright.config.ts  tsconfig.tsbuildinfo
frontend/afristore-app/e2e/: freighter-mock.ts  listing-flow.spec.ts  marketplace-journey.spec.ts  purchase-flow.spec.ts  wallet-connection.spec.ts  wallet-network.spec.ts  wallet-not-installed.spec.ts
frontend/afristore-app/e2e/helpers/: marketplace-mocks.ts  wallet.ts
frontend/afristore-app/src/__tests__/: BiddingPanel.test.tsx  CheckoutModal.test.tsx  FeaturedListings.test.tsx  ListingCard.test.tsx  ListingForm.test.tsx  contract.test.ts  listings.test.tsx  useAuctions.test.tsx  useMarketplace.test.tsx
indexer/: .env  .env.example  MIGRATIONS.md  README.md  package.json
indexer/prisma/: schema.prisma
indexer/src/: parser.ts  poller.ts  redis.ts
indexer/src/__tests__/: api.test.ts  cache-middleware.test.ts  poller.test.ts
indexer/src/api/: routes.ts
scripts/deploy/: deploy_contract.sh  deploy_launchpad.sh  deploy_test_collections.sh  test_list_nft.sh
(+43 files in other folders)
