[workspace]
members = [
    "contracts/soroban-marketplace",
    "contracts/launchpad",
    "contracts/collection_nft_erc721",
    "contracts/collection_nft_erc1155",
    "contracts/lazy_mint_erc721",
    "contracts/lazy_mint_erc1155",
    "contracts/royalty-splitter",
    "contracts/nft-staking",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

