[package]
name = "royalty-splitter"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "25.3.0" }

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }
